...
                Image(systemName: "doc.on.doc")
                Text("住所をコピー")
                    .fontWeight(.bold)
            }
        }
        .buttonStyle(.borderedProminent)
        .accessibility(identifier: "buttonCopyResult")
    }
    
    private var closeResultViewButton: some View {
        Button(action: {
            presentationMode.wrappedValue.dismiss()
        }, label: {
            Text("この画面を閉じる")
                .fontWeight(.bold)
        })
        .buttonStyle(.bordered)
        .accessibility(identifier: "buttonCloseResultView")
    }
    
    func setAddress() -> String {
        self.address3 == "" ? "\(self.address1) \(self.address2)" : "\(self.address1) \(self.address2) \(self.address3)"
    }
}
...
