...
        }
    }
    
    private var textField: some View {
        VStack{
            TextField("9999999", text: $searchZipCode)
                .accessibility(identifier: "textFieldEnterZipcode")
                .multilineTextAlignment(.center)
                .font(.title)
            Divider()
        }
        .padding(30)
    }
...
            self.showProgressView.toggle()
            self.setResultData()
        } label: {
            Text("検索")
                .fontWeight(.bold)
        }
        .accessibility(identifier: "buttonExecute")
        .buttonStyle(.borderedProminent)
        .fullScreenCover(isPresented: $showResultView) {
            ResultView(zipcode:$searchZipCode.wrappedValue ,address1: address1, address2: address2, address3: address3)
        }
        .alert(isPresented: $showAlert) {
            Alert(title: Text("エラー"), message: Text("住所を取得できませんでした"))
...
